# Time-Compute

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: API_Reference.md  About_dependencies.md  About_testing.md  About_time_compute.md  Architecture.md  Use_Example.md  migrating_from_chrono.md  why_not_chrono.md
src/: buddhist_calendar.rs  calendar.rs  chinese_calendar.rs  datetime.rs  duration.rs  japanese_era.rs  lib.rs  matariki.rs  month.rs  round.rs  traits.rs  weekday.rs  weekday_set.rs
src/format/: formatting.rs  locales.rs  mod.rs  parse.rs  parsed.rs  scan.rs  strftime.rs
src/naive/: date.rs  datetime.rs  iter.rs  mod.rs  time.rs  week.rs
src/offset/: fixed.rs  local.rs  mod.rs  utc.rs
